--- a/01_DataRescue/Austin2010/README_Austin2010.qmd
+++ b/01_DataRescue/Austin2010/README_Austin2010.qmd
@@ -178,7 +178,7 @@ These files are in the Austin2010 data rescue.
   - [X] reformat equations and mathematical symbols as [LaTex](https://en.wikibooks.org/wiki/LaTeX/Mathematics)
   - [X] reformat text using [Markdown](https://www.markdownguide.org/cheat-sheet/)
   - [X] Create a bib file with the citations from the methods section (note: none included in this paper's methods section.)
-  - [ ] Push to your local fork and get a second transcription pushed to your local fork by someone else on the project
+  - [X] Push to your local fork and get a second transcription pushed to your local fork by someone else on the project
 + Measure
   - [ ] cross check with second transcriber for tables and methods, and resolve any differences
   - [ ] compile ReadMe with all chunks up through the Level 0 data rescue section with `eval: true`
