--- a/01_DataRescue/Austin2010/README_Austin2010.qmd
+++ b/01_DataRescue/Austin2010/README_Austin2010.qmd
@@ -59,8 +59,8 @@ timelog:
     description: Finish moving rescue from old template to new template.
     who: ashbonner310 
     start: 2026-01-30 T17:51
-    end: 2026-01-30 THH:MM
-    duration: P32M
+    end: 2026-01-30 T18:45
+    duration: P54M
 version: 'vs202512' 
 ---
 
